# Mass-balance-evidention

./: .env.development  .env.production  .gitignore  codegen.production.ts  codegen.ts  codegen.yml  docker-compose-dev.yml  docker-compose.yml  index.html  package-lock.json  package.json  schema.gql  vite.config.ts
docker/: .env
electron_react_old/: LICENSE
gql/: Article.gql  Buyer.gql  Cell.gql  CellCulturePair.gql  Culture.gql  DataGroup.gql  DispatchNote.gql  DispatchNoteArticle.gql  DispatchNoteIdentTracker.gql  Entry.gql  MbeGroup.gql  MbeGroupMember.gql  MbeUser.gql  (+1 more)
remote_db/: .env.dev  .env.endpoints  .env.production  Cargo.toml  sqlx-data.json
remote_db/migrations/: 20220907095651_initial.sql  20220911181003_entry_cascade_on_update.sql  20221015143947_search_indexing.sql  20221219130424_change_gin_to_gist_index.sql  20230304092621_users.sql  20230429092706_weight.sql  20230502123828_better_data_grouping.sql  20230513091211_revert_entry_weight_type.sql  20230524082208_dispatch_notes_ident_tracker.sql
remote_db/migrations_old/: 20221016102952_segragation.sql  20230209113818_dispatch_note.sql  20230209114443_init.sql
remote_db/src/: auth.rs  http_response_errors.rs  main.rs  redis_csrf_cache.rs
remote_db/src/models/: buyer.rs  cell.rs  cell_culture_pair.rs  culture.rs  data_group.rs  db_query.rs  entry.rs  mod.rs  weight_types.rs
remote_db/src/seaorm_models/: article.rs  buyer.rs  cell.rs  cell_culture_pair.rs  culture.rs  data_group.rs  dispatch_note.rs  dispatch_note_article.rs  dispatch_note_ident_tracker.rs  entry.rs  graphql_schema.rs  mod.rs  prelude.rs  weight_type.rs  weight_types.rs
remote_db/src/user_models/: mbe_group.rs  mbe_group_allowed_data_groups.rs  mbe_group_members.rs  mbe_groups_weight_types.rs  mbe_user.rs  mod.rs
(+153 files in other folders)
