[package]
name = "remote_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-graphql = "4.0"
async-graphql-actix-web = "4.0"

thiserror = "1.0.33"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.0"
env_logger = "0.8.4"
dotenvy = "0.15.3"

sqlx = { version = "0.6", features = [
    "runtime-actix-rustls",
    "postgres",
    "macros",
    "migrate",
    "offline",
    "chrono",
] }
anyhow = "1.0"
chrono = "0.4.22"
