[package]
name = "remote_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-graphql = { version = "4.0", features = ["chrono", "log"] }
async-graphql-actix-web = "4.0"
thiserror = "1.0.33"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.0"
env_logger = "0.8.4"
dotenvy = "0.15.3"

sqlx = { version = "0.6", features = [
    "runtime-actix-rustls",
    "postgres",
    "macros",
    "migrate",
    "offline",
    "chrono",
] }
anyhow = "1.0"
chrono = "0.4.22"
async-trait = "0.1.57"
actix-cors = "0.6.2"
sea-orm = { version = "^0", features = [
    "sqlx-postgres",
    "runtime-actix-rustls",
    "macros",
] }
oauth2 = "4.3.0"
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
redis = { version = "0.22.3", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11.14", features = ["json"] }
rand = { version = "0.8.5", features = ["std_rng"] }
sha2 = "0.10.7"
